# academic-word-paper-skill

./: .gitignore  SKILL.md  pyproject.toml
agents/: openai.yaml
tests/: test_academic_analysis.py  test_quality_gate.py  test_reference_system.py  test_word_compiler.py  test_wordpaper_mvp.py
wordpaper/: __init__.py  academic.py  cli.py  compiler.py  ir.py  ooxml.py  patch.py  quality.py  validator.py
