[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-word-paper-skill"
version = "0.1.0"
description = "Codex skill and Python CLI for analyzing, patching, and validating academic Word docx manuscripts."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wordpaper = "wordpaper.cli:main"

[tool.setuptools.packages.find]
include = ["wordpaper*"]
